--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -28,4 +28,4 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push a DockerHub
-        run: docker push TU_USUARIO/wordleapp:${{ github.sha }}
+        run: docker push mserral/wordleapp:${{ github.sha }}
