--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -25,7 +25,7 @@ jobs:
         run: docker build -t mserral/wordleapp:${{ github.sha }} .
 
       - name: Login en DockerHub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
       - name: Push a DockerHub
         run: docker push mserral/wordleapp:${{ github.sha }}
