--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>WordleApp</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
