--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=WordleApp
-spring.mustache.suffix=.html
+spring.mustache.prefix=classpath:/templates/
+spring.mustache.suffix=.mustache
 server.port=8080
 logging.level.org.springframework.web=DEBUG
