--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,36 +33,41 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y google-chrome-stable unzip curl
-
+          
           # Obtener la versión de Chrome instalada
           CHROME_VERSION=$(google-chrome --version | grep -oP '[0-9]+\.[0-9]+\.[0-9]+' | head -1)
           echo "Chrome version: $CHROME_VERSION"
-
+          
           # Obtener la versión de ChromeDriver compatible
           CHROMEDRIVER_VERSION=$(curl -sS "https://googlechromelabs.github.io/chrome-for-testing/latest-patch-versions-per-build-with-downloads.json" | jq -r ".builds[\"$CHROME_VERSION\"].version")
-
+          
           if [[ -z "$CHROMEDRIVER_VERSION" ]]; then
             echo "Error: No se encontró una versión de ChromeDriver compatible para $CHROME_VERSION"
             exit 1
           fi
-
+          
           echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
-
+          
           # Descargar ChromeDriver
           curl -sS -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROMEDRIVER_VERSION/linux64/chromedriver-linux64.zip"
-
+          
           # Verificar si la descarga fue exitosa
           if ! unzip -tq chromedriver.zip; then
             echo "Error: El archivo descargado no es un ZIP válido"
             exit 1
           fi
-
+          
           # Extraer y mover ChromeDriver
           sudo unzip chromedriver.zip -d /usr/local/bin/
+          
+          # Limpiar archivos innecesarios de ChromeDriver
+          sudo rm -f /usr/local/bin/chromedriver-linux64/LICENSE.chromedriver /usr/local/bin/chromedriver-linux64/THIRD_PARTY_NOTICES.chromedriver
+          
+          # Mover el ejecutable y dar permisos
           sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
           rm -r chromedriver.zip /usr/local/bin/chromedriver-linux64
-
+          
           # Verificar la instalación
           chromedriver --version
 
