--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - ci-cd-improvement
 
 jobs:
   ci:
@@ -115,3 +116,4 @@ jobs:
 
       - name: Push Docker Image
         run: docker push mserral/wordleapp:${{ env.VERSION }}
+
