--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,7 +44,7 @@ jobs:
           CHROMEDRIVER_VERSION=$(curl -sS "https://googlechromelabs.github.io/chrome-for-testing/latest-patch-versions-per-build-with-downloads.json" | jq -r ".builds[\"$CHROME_VERSION\"].version")
 
           if [[ -z "$CHROMEDRIVER_VERSION" ]]; then
-            echo "No compatible ChromeDriver version was found for $CHROME_VERSION”
+            echo "No compatible ChromeDriver version was found for $CHROME_VERSION"
             exit 1
           fi
 
