--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,16 @@
-name: CI Pipeline
+name: CI/CD Pipeline
 
 on:
-  push:
+  pull_request:
     branches:
       - master
-  pull_request:
+  push:
     branches:
       - master
 
 jobs:
-  build:
+  ci:
+    name: Run Tests
     runs-on: ubuntu-latest
 
     steps:
@@ -32,49 +33,57 @@ jobs:
       - name: Install Chrome & ChromeDriver
         run: |
           sudo apt update
-          sudo apt install -y google-chrome-stable unzip curl
-          
-          # Obtener la versión de Chrome instalada
+          sudo apt install -y google-chrome-stable unzip curl jq
+
+          # Get Chrome version
           CHROME_VERSION=$(google-chrome --version | grep -oP '[0-9]+\.[0-9]+\.[0-9]+' | head -1)
           echo "Chrome version: $CHROME_VERSION"
-          
-          # Obtener la versión de ChromeDriver compatible
+
+          # Get compatible ChromeDriver version
           CHROMEDRIVER_VERSION=$(curl -sS "https://googlechromelabs.github.io/chrome-for-testing/latest-patch-versions-per-build-with-downloads.json" | jq -r ".builds[\"$CHROME_VERSION\"].version")
-          
+
           if [[ -z "$CHROMEDRIVER_VERSION" ]]; then
-            echo "Error: No se encontró una versión de ChromeDriver compatible para $CHROME_VERSION"
+            echo "No compatible ChromeDriver version found for $CHROME_VERSION"
             exit 1
           fi
-          
+
           echo "ChromeDriver version: $CHROMEDRIVER_VERSION"
-          
-          # Descargar ChromeDriver
+
+          # Download and install ChromeDriver
           curl -sS -o chromedriver.zip "https://storage.googleapis.com/chrome-for-testing-public/$CHROMEDRIVER_VERSION/linux64/chromedriver-linux64.zip"
-          
-          # Verificar si la descarga fue exitosa
-          if ! unzip -tq chromedriver.zip; then
-            echo "Error: El archivo descargado no es un ZIP válido"
-            exit 1
-          fi
-          
-          # Extraer y mover ChromeDriver
           sudo unzip chromedriver.zip -d /usr/local/bin/
-          
-          # Limpiar archivos innecesarios de ChromeDriver
-          sudo rm -f /usr/local/bin/chromedriver-linux64/LICENSE.chromedriver /usr/local/bin/chromedriver-linux64/THIRD_PARTY_NOTICES.chromedriver
-          
-          # Mover el ejecutable y dar permisos
           sudo mv /usr/local/bin/chromedriver-linux64/chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
           rm -r chromedriver.zip /usr/local/bin/chromedriver-linux64
-          
-          # Verificar la instalación
+
+          # Verify ChromeDriver installation
           chromedriver --version
 
       - name: Run tests
         run: mvn test
 
-      - name: Build and analyze with SonarCloud
+  sonar:
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    needs: ci  # 🚨 Solo se ejecuta si `ci` pasa
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: maven-
+
+      - name: Run SonarCloud Analysis
         run: |
           mvn clean verify sonar:sonar \
             -Dsonar.projectKey=M-Serral_WordleApp \
@@ -82,13 +91,39 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONARCLOUD_TOKEN }}
 
-      - name: Download SonarCloud Report
-        run: |
-          curl -s -u ${{ secrets.SONARCLOUD_TOKEN }} \
-          "https://sonarcloud.io/api/measures/component?component=M-Serral_WordleApp&metricKeys=coverage,bugs,vulnerabilities,code_smells" -o sonar_report.json
-
       - name: Upload Sonar Report
         uses: actions/upload-artifact@v4
         with:
-          name: SonarQube Report
+          name: SonarCloud Report
           path: sonar_report.json
+
+  cd:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
+    needs: ci  # 🚨 Solo se ejecuta si `ci` pasa
+    if: github.event_name == 'push'  # 🚨 Solo se ejecuta en push a master
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn clean package -DskipTests
+
+      - name: Get project version from pom.xml
+        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
+      - name: Build Docker Image
+        run: docker build -t mserral/wordleapp:${{ env.VERSION }} .
+
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+
+      - name: Push Docker Image
+        run: docker push mserral/wordleapp:${{ env.VERSION }}
