--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,7 +84,7 @@ jobs:
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
-    needs: ci  # 🚨 Solo se ejecuta si `ci` pasa
+    needs: ci  # only execute if ci pass
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -119,8 +119,8 @@ jobs:
   cd:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: ci  # 🚨 Solo se ejecuta si `ci` pasa
-    if: github.event_name == 'push'  # 🚨 Solo se ejecuta en push a master
+    needs: ci  # only execute if ci pass
+    if: github.event_name == 'push'  # only execute in push to master
 
     steps:
       - name: Checkout repository
