--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=WordleApp
-spring.mustache.prefix=classpath:/templates/
-spring.mustache.suffix=.mustache
+spring.mustache.suffix=.html
 server.port=8080
 logging.level.org.springframework.web=DEBUG
