fixing Run Tests job in CI/CD workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,10 +76,23 @@ jobs:
 
           # Verify the installation
           chromedriver --version
-      
+
+      - name: Start application in background
+        run: mvn spring-boot:run &
+        env:
+          SPRING_PROFILES_ACTIVE: test
+
+      - name: Wait for application to start
+        run: |
+          echo "Waiting for the application to start..."
+          sleep 5
+          curl --retry 5 --retry-delay 5 --retry-connrefused -s http://localhost:8080 || (echo "Application did not start" && exit 1)
 
       - name: Run tests
         run: mvn test
+
+      - name: Stop application
+        run: pkill -f "java.*spring-boot"
 
   sonar:
     name: SonarCloud Analysis
