--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,13 +115,14 @@ jobs:
           key: maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-
 
-      - name: Run SonarCloud Analysis
+      - name: Run SonarCloud Analysis without tests
         run: |
-          mvn clean verify sonar:sonar \
-            -Dsonar.projectKey=M-Serral_WordleApp \
-            -Dsonar.organization=m-serral \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONARCLOUD_TOKEN }}
+          mvn sonar:sonar -Dsonar.projectKey=M-Serral_WordleApp \
+                          -Dsonar.organization=m-serral \
+                          -Dsonar.host.url=https://sonarcloud.io \
+                          -Dsonar.login=${{ secrets.SONARCLOUD_TOKEN }} \
+                          -DskipTests
+      
 
       - name: Upload Sonar Report
         uses: actions/upload-artifact@v4
@@ -133,7 +134,6 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: ci  # only execute if ci pass
-    if: github.event_name == 'push'  # only execute in push to master
 
     steps:
       - name: Checkout repository
