--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -123,6 +123,11 @@ jobs:
                           -Dsonar.login=${{ secrets.SONARCLOUD_TOKEN }} \
                           -Dsonar.java.binaries=target/classes
                           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+          
+      - name: Download Sonar Report
+        run: |
+          curl -s -u ${{ secrets.SONARCLOUD_TOKEN }} \
+          "https://sonarcloud.io/api/measures/component?component=M-Serral_WordleApp&metricKeys=coverage,bugs,vulnerabilities,code_smells" -o sonar_report.json
 
       - name: Upload Sonar Report
         uses: actions/upload-artifact@v4
