--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -97,6 +97,7 @@ jobs:
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
+    needs: ci  # only execute if ci pass
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
