--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,9 +84,11 @@ jobs:
 
       - name: Wait for application to start
         run: |
-          echo "Waiting for the application to start..."
-          sleep 5
-          curl --retry 5 --retry-delay 5 --retry-connrefused -s http://localhost:8080 || (echo "Application did not start" && exit 1)
+          for i in {1..10}; do
+            curl --retry 5 --retry-delay 5 --retry-connrefused -s http://localhost:8080 && break
+            echo "Waiting for app to be ready..."
+            sleep 3
+          done
 
       - name: Run tests
         run: mvn test
