--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -93,16 +93,15 @@ jobs:
       - name: Run tests
         run: mvn test
 
-      - name: Stop application
-        run: pkill -f "java.*spring-boot"
-
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: ci  # only execute if ci pass
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -126,7 +125,7 @@ jobs:
           mvn sonar:sonar -Dsonar.projectKey=M-Serral_WordleApp \
                           -Dsonar.organization=m-serral \
                           -Dsonar.host.url=https://sonarcloud.io \
-                          -Dsonar.login=${{ secrets.SONARCLOUD_TOKEN }} \
+                          -Dsonar.token=${{ secrets.SONARCLOUD_TOKEN }} \
                           -Dsonar.java.binaries=target/classes
                           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
                           env:
