--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,11 +84,12 @@ jobs:
 
       - name: Wait for application to start
         run: |
-          for i in {1..10}; do
-            curl --retry 5 --retry-delay 5 --retry-connrefused -s http://localhost:8080 && break
+          for i in {1..30}; do
+            nc -z localhost 8080 && echo "App is up!" && break
             echo "Waiting for app to be ready..."
             sleep 3
           done
+      
 
       - name: Run tests
         run: mvn test
