--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,8 @@ jobs:
   ci:
     name: Run Tests
     runs-on: ubuntu-latest
+    env:
+      SERVER_PORT: 8080
 
     steps:
       - name: Checkout repository
@@ -92,12 +94,15 @@ jobs:
       
 
       - name: Run tests
-        run: mvn test
+        run: mvn test -Dserver.port=${{ env.SERVER_PORT }}
 
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: ci  # only execute if ci pass
+    env:
+      SERVER_PORT: 8081
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -118,7 +123,9 @@ jobs:
           restore-keys: maven-
 
       - name: Run tests and generate JaCoCo report
-        run: mvn clean verify
+        run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }} &
+        env:
+          SPRING_PROFILES_ACTIVE: test
 
       - name: Compile and Run SonarCloud Analysis
         run: |
