--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -127,17 +127,17 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: test
 
+      - name: Verify JaCoCo report
+        run: ls -l target/site/jacoco/
+
       - name: Compile and Run SonarCloud Analysis
         run: |
-          mvn clean package -DskipTests
           mvn sonar:sonar -Dsonar.projectKey=M-Serral_WordleApp \
                           -Dsonar.organization=m-serral \
                           -Dsonar.host.url=https://sonarcloud.io \
                           -Dsonar.token=${{ secrets.SONARCLOUD_TOKEN }} \
-                          -Dsonar.java.binaries=target/classes
+                          -Dsonar.java.binaries=target/classes \
                           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-                          env:
-                            SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }}
           
           
       - name: Download Sonar Report
