--- a/pom.xml
+++ b/pom.xml
@@ -81,14 +81,13 @@
             <version>0.8.11</version>
             <executions>
                 <execution>
-                    <id>report</id>
-                    <phase>verify</phase>
+                    <id>prepare-agent</id>
                     <goals>
                         <goal>prepare-agent</goal>
                     </goals>
                 </execution>
                 <execution>
-                    <id>report-aggregate</id>
+                    <id>report</id>
                     <phase>verify</phase>
                     <goals>
                         <goal>report</goal>
