--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -129,21 +129,24 @@ jobs:
 
       - name: Wait for application to start
         run: |
-          echo "Esperando a que la aplicación inicie..."
+          echo "Waiting app to be ready..."
           for i in {1..10}; do
             if curl --silent --fail http://localhost:8081; then
-              echo "La aplicación está en funcionamiento."
+              echo "App is already working."
               break
             fi
-            echo "Esperando 3 segundos más..."
+            echo "Waiting 3 more seconds..."
             sleep 3
           done
 
       - name: Run tests and generate JaCoCo report
-        run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }}
+        run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }} jacoco:report
 
       - name: Verify JaCoCo report
-        run: find target/ -name "jacoco.xml" -print || echo "JaCoCo report not found"
+        run: |
+          echo "Validating JaCoCo report..."
+          ls -l target/site/jacoco/ || echo "JaCoCo report NOT FOUND"
+      
 
       - name: Wait for JaCoCo report
         run: sleep 5
