--- a/pom.xml
+++ b/pom.xml
@@ -78,18 +78,16 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.11</version>  <!-- Usa la última versión disponible -->
+                <version>0.8.11</version>
                 <executions>
-                    <!-- Generar reporte XML después de las pruebas -->
                     <execution>
-                        <id>report</id>
-                        <phase>verify</phase>
+                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
                     <execution>
-                        <id>report-aggregate</id>
+                        <id>report</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>report</goal>
