--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,7 +99,7 @@ jobs:
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
-    needs: ci  # only execute if ci pass
+    needs: ci
     env:
       SERVER_PORT: 8081
 
@@ -181,8 +181,8 @@ jobs:
   cd:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: ci  # only execute if ci pass
-
+    needs: ci
+    if: success() # only execute if ci pass
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
