--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -198,6 +198,7 @@ jobs:
 
       - name: Get project version from pom.xml
         run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+          GIT_SHA=$(git rev-parse --short HEAD)
 
       - name: Build Docker Image
         run: docker build -t mserral/wordleapp:${{ env.VERSION }} .
