--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -100,6 +100,7 @@ jobs:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: ci
+    if: always()
     env:
       SERVER_PORT: 8081
 
@@ -182,7 +183,7 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: ci
-    if: success() # only execute if ci pass
+    if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -197,11 +198,18 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Get project version from pom.xml
-        run: echo "VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
-          GIT_SHA=$(git rev-parse --short HEAD)
+        run: |
+          VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-      - name: Build Docker Image
-        run: docker build -t mserral/wordleapp:${{ env.VERSION }} .
+      - name: Get Git SHA
+        run: |
+          GIT_SHA=$(git rev-parse --short HEAD)
+          echo "GIT_SHA=$GIT_SHA" >> $GITHUB_ENV
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ***/wordleapp:${{ env.VERSION }}-${{ env.GIT_SHA }} .
 
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
