--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,7 @@ jobs:
   ci:
     name: Run Tests
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     env:
       SERVER_PORT: 8080
 
@@ -100,7 +101,7 @@ jobs:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: ci
-    if: always()
+    if: github.event_name == 'pull_request'
     env:
       SERVER_PORT: 8081
 
@@ -182,8 +183,7 @@ jobs:
   cd:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-    needs: ci
-    if: success() && github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
