--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   ci:
-    name: Run Tests
+    name: Run Tests and generate JaCoCo report
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
     env:
@@ -95,15 +95,13 @@ jobs:
 
 
       - name: Run tests
-        run: mvn test -Dserver.port=${{ env.SERVER_PORT }}
+        run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }} jacoco:report
 
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
     needs: ci
     if: github.event_name == 'pull_request'
-    env:
-      SERVER_PORT: 8081
 
     steps:
       - name: Checkout repository
@@ -124,34 +122,11 @@ jobs:
           key: maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-
 
-      - name: Start application in background
-        run: mvn spring-boot:run -Dserver.port=${{ env.SERVER_PORT }} &
-        env:
-          SPRING_PROFILES_ACTIVE: test
-
-      - name: Wait for application to start
-        run: |
-          echo "Waiting app to be ready..."
-          for i in {1..10}; do
-            if curl --silent --fail http://localhost:8081; then
-              echo "App is already working."
-              break
-            fi
-            echo "Waiting 3 more seconds..."
-            sleep 3
-          done
-
-      - name: Run tests and generate JaCoCo report
-        run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }} jacoco:report
-
-      - name: Verify JaCoCo report
-        run: |
-          echo "Validating JaCoCo report..."
-          ls -l target/site/jacoco/ || echo "JaCoCo report NOT FOUND"
-      
-
-      - name: Wait for JaCoCo report
-        run: sleep 5
+      - name: Upload JaCoCo Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: JaCoCo Report
+          path: target/site/jacoco/
 
       - name: Compile and Run SonarCloud Analysis
         run: |
@@ -161,7 +136,6 @@ jobs:
                           -Dsonar.token=${{ secrets.SONARCLOUD_TOKEN }} \
                           -Dsonar.java.binaries=target/classes \
                           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-
 
       - name: Download Sonar Report
         run: |
@@ -174,11 +148,6 @@ jobs:
           name: SonarCloud Report
           path: sonar_report.json
 
-      - name: Upload JaCoCo Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: JaCoCo Report
-          path: target/site/jacoco/
 
   cd:
     name: Build and Push Docker Image
