--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -93,6 +93,11 @@ jobs:
             sleep 3
           done
 
+      - name: Save target directory
+        uses: actions/upload-artifact@v4
+        with:
+         name: target-directory
+         path: target/
 
       - name: Run tests
         run: mvn clean verify -Dserver.port=${{ env.SERVER_PORT }} jacoco:report
@@ -128,12 +133,19 @@ jobs:
           name: JaCoCo Report
           path: target/site/jacoco/
 
+      - name: Download target directory
+        uses: actions/download-artifact@v4
+        with:
+          name: target-directory
+          path: target/
+
       - name: Compile and Run SonarCloud Analysis
         run: |
           mvn sonar:sonar -Dsonar.projectKey=M-Serral_WordleApp \
                           -Dsonar.organization=m-serral \
                           -Dsonar.host.url=https://sonarcloud.io \
                           -Dsonar.token=${{ secrets.SONARCLOUD_TOKEN }} \
+                          -Dsonar.java.binaries=target/classes \
                           -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
       - name: Download Sonar Report
