--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,9 @@ jobs:
           key: maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: maven-
 
+      - name: Compile project
+        run: mvn clean compile
+
       - name: Install Chrome & ChromeDriver
         run: |
           sudo apt update
@@ -102,6 +105,12 @@ jobs:
           name: JaCoCo Report
           path: target/site/jacoco/
 
+      - name: Save compiled classes
+        uses: actions/upload-artifact@v4
+        with:
+          name: Compiled Classes
+          path: target/classes/
+
   sonar:
     name: SonarCloud Analysis
     runs-on: ubuntu-latest
@@ -132,6 +141,12 @@ jobs:
         with:
           name: JaCoCo Report
           path: target/site/jacoco/
+
+      - name: Download compiled classes
+        uses: actions/download-artifact@v4
+        with:
+          name: Compiled Classes
+          path: target/classes/
 
       - name: Compile and Run SonarCloud Analysis
         run: |
