Feature/v0.2.0 updating pom to exclude some not necessary controller and UI tests

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,8 @@
                 <configuration>
                     <excludes>
                         <exclude>com/wordleapp/WordleAppApplication</exclude>
+                        <exclude>com/wordleapp/WordleControllerTest</exclude>
+                        <exclude>com/wordleapp/WordleUITest</exclude>
                         <excludedGroups>excluded</excludedGroups>
                     </excludes>
                 </configuration>
