refactor: adding logic to application properties to run in local or deployment real environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.mustache.prefix=classpath:/templates/
 spring.mustache.suffix=.mustache
 server.port=8080
 logging.level.org.springframework.web=DEBUG
+
+spring.profiles.active=local
