chore: updating ci-cd.yml, adding Git tag and draft GitHub release from pom version. Updating application.properties, setting profile as "docker"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.mustache.suffix=.mustache
 server.port=8080
 logging.level.org.springframework.web=DEBUG
 
-spring.profiles.active=local
+spring.profiles.active=docker
