--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -142,3 +142,33 @@ jobs:
 
       - name: Push Docker Image
         run: docker push mserral/wordleapp:${{ env.VERSION }}-${{ env.GIT_SHA }}
+
+      - name: Create and publish Git Tag
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git tag -a "v${{ env.VERSION }}" -m "Release v${{ env.VERSION }}"
+          git push origin "v${{ env.VERSION }}"
+
+
+      - name: Read release notes
+        id: release_notes
+        run: |
+          echo "RELEASE_BODY<<EOF" >> $GITHUB_ENV
+          cat RELEASE_NOTES.md >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+
+      - name: Create and publish GitHub Draft Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: v${{ env.VERSION }}
+          name: WordleApp v${{ env.VERSION }}
+          body: ${{ env.RELEASE_BODY }}
+          draft: true
+          files: |
+            docker-compose.yml
+            Dockerfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
