--- a/.github/workflows/test-tag.yaml
+++ b/.github/workflows/test-tag.yaml
@@ -54,3 +54,6 @@ jobs:
           files: |
             docker-compose.yml
             Dockerfile
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+
