feat(release): publish production-ready Docker artifacts and image latest tag
- Created and included docker-compose.prod.yml for production deployments using DockerHub image.
- Tagged and pushed Docker image as `mserral/wordleapp:latest` in CI after merging to master.
- Ensured docker-compose.prod.yml uses the latest image for simplified execution.
- Published production compose file as release artifacts.
- Updated GitHub Actions workflow to automate tagging and release asset publication.
- Added persistent MySQL volume for data retention in production setup.
- Test data endpoint remains protected and limited to 'local' or 'docker' profiles.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -143,6 +143,11 @@ jobs:
       - name: Push Docker Image
         run: docker push mserral/wordleapp:${{ env.VERSION }}-${{ env.GIT_SHA }}
 
+      - name: Tag and push image as 'latest'
+        run: |
+          docker tag mserral/wordleapp:${{ env.VERSION }}-${{ env.GIT_SHA }} mserral/wordleapp:latest
+          docker push mserral/wordleapp:latest
+
 
       - name: Create and publish Git Tag via GitHub API with PR title
         env:
@@ -196,6 +201,7 @@ jobs:
           name: WordleApp v${{ env.VERSION }}
           body: ${{ env.RELEASE_BODY }}
           files: |
+            docker-compose.prod.yml
             docker-compose.yml
             Dockerfile
           prerelease: false
